# DRAWFIT_V2

./: .dockerignore  .gitignore  DRAWFIT.py  Information.txt  LandMine.txt  Permissions.txt  Pipfile  README.md  RequestBWIN-MacBook Pro.py  Requests_Test.py  Requirements.txt  Rerquirements.md  SitesCodesDoc.md  database.sql  docker-compose-example.yml  docker-compose.yml  fixtures.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  teste.txt  trash
0_BWIN/: RequestBWIN.py
1_BETANO/: Betano_Info_Structure.json  RequestBETANO.py
2_SOLVERDE/: Message_Exrtract.txt  RequestSOLVERDE.py  S.txt
3_MOOSH/: RequestMOOSH.py
4_BETWAY/: RequestBETWAY.py
5_BETCLIC/: Api_Example.json  RequestBETCLIC.py
A_BWIN/: RequestBWIN.py
BWIN/: RequestBWIN.py
F_BETCLIC/: RequestBETCLIC.py
Obsoleto/: Date.py  Teste.txt  Teste_Liga_Bwin.py  URLParsing.py  database.py  db.py
database/: dbProxy.py  initial_database.sql
discord_bot/src/drawfit/: Drawfit.py
discord_bot/tests/: Sites_Object_Test.py
docker/bot/: Dockerfile
docker/db/: Dockerfile
src/: Requests_Test.py
src/database/: init-db.sh  initial_database.sql  pg_hba.conf  populate.sql  populate_example.sql  postgresql.conf
src/drawfit/: Drawfit.py  parameters-example.py  parameters.py
src/drawfit/bot/: DrawfitBot.py  notify.py  (+7 more)
src/main/: DRAWFIT.py
src/ssl/: make_certificates.sh
src/tests/: Requests_Test.py
tests/: utils.py
tests/domain/: Odd_test.py  followable_test.py  game_test.py  league_test.py  notifications_test.py  odd_test.py  team_test.py
tests/utils_classes/: odd_sample_test.py
(+132 files in other folders)
