[metadata]
name = drawfit
description = discord bot for odds monitoring
author = Diogo Nogueira
platforms = unix, linux, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    =src
packages=find:

[options.packages.find]
where = src
exclude =
    tests*


install_requires =
    websockets>=10
    discord>=1
    requests-html>=0

python_requires = >=3.6

zip_safe = no

[options.extras_require]
testing =
    pytest>=7.0

[options.package_data]
drawfit = py.typed

[flake8]
max-line-length = 160